[gd_scene load_steps=20 format=1]

[ext_resource path="res://game/scenes/world.gd" type="Script" id=1]
[ext_resource path="res://game/scenes/hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/scenes/walls.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/scenes/floor.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/scripts/enemy.gd" type="Script" id=6]
[ext_resource path="res://assets/sprites/bug.png" type="Texture" id=7]
[ext_resource path="res://game/scripts/enemypathfollow.gd" type="Script" id=8]
[ext_resource path="res://game/scripts/doors.gd" type="Script" id=9]
[ext_resource path="res://game/scenes/door.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/sprites/door_btn.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/obj/solutio_n.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/obj/capsule.png" type="Texture" id=13]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 8.0
height = 12.0

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": Vector2Array(  )
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=6]

resource/name = "capture_roach"
length = 5.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("solutio_n:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 176 ), Vector2( 360, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("solutio_n:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1, 2, 5 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 3, 3 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("capsule:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5, 5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 176 ), Vector2( 360, 168 ), Vector2( 360, 200 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("capsule:transform/scale")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5, 5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("solutio_n:z/z")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 5 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("capsule:z/z")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 5 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("enemy:transform/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 208 ), Vector2( 360, 200 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("enemy:transform/scale")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 2, 2.5, 4, 5 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.75, 0.75 ), Vector2( 0.5, 0.5 ), Vector2( 0.1, 0.1 ) ]
}

[node name="world" type="Node2D"]

script/script = ExtResource( 1 )

[node name="hud" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="player" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 200, 80 )

[node name="walls" parent="." instance=ExtResource( 4 )]

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 32.0
margin/right = 72.0
margin/bottom = 46.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="floor" parent="." instance=ExtResource( 5 )]

[node name="enemy" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 136, 80 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="enemy"]

transform/scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="path" type="Path2D" parent="enemy"]

curve = SubResource( 2 )

[node name="pathfollow" type="PathFollow2D" parent="enemy/path"]

offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script/script = ExtResource( 8 )

[node name="emit_control" type="Timer" parent="enemy"]

process_mode = 1
wait_time = 0.17
one_shot = true
autostart = false

[node name="path_clear" type="Timer" parent="enemy"]

process_mode = 1
wait_time = 7.0
one_shot = false
autostart = true

[node name="game_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 100.0
one_shot = false
autostart = false

[node name="doors" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 9 )

[node name="door" parent="doors" instance=ExtResource( 10 )]

editor/display_folded = true
transform/pos = Vector2( 352, 240 )

[node name="door1" parent="doors" instance=ExtResource( 10 )]

editor/display_folded = true
transform/pos = Vector2( 368, 240 )

[node name="door_switch" type="Area2D" parent="."]

transform/pos = Vector2( 552, 104 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="switch" type="AnimatedSprite" parent="door_switch"]

frames = SubResource( 4 )
animation = "closed"

[node name="collision" type="CollisionShape2D" parent="door_switch"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="goal" type="Area2D" parent="."]

transform/pos = Vector2( 360, 208 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="collision" type="CollisionShape2D" parent="goal"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="solutio_n" type="Sprite" parent="."]

transform/pos = Vector2( 360, 176 )
z/z = 2
texture = ExtResource( 12 )

[node name="capsule" type="Sprite" parent="."]

transform/pos = Vector2( 360, 176 )
z/z = 3
texture = ExtResource( 13 )

[node name="solutio_n_anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/capture_roach = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="ground_pos" from="floor" to="enemy" method="_on_floor_ground_pos"]

[connection signal="timeout" from="enemy/path_clear" to="enemy" method="_on_path_clear_timeout"]

[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]

[connection signal="doors_are_closed" from="doors" to="." method="_on_doors_doors_are_closed"]

[connection signal="body_enter" from="door_switch" to="." method="_on_door_switch_body_enter"]

[connection signal="body_enter" from="goal" to="." method="_on_goal_body_enter"]

[connection signal="body_exit" from="goal" to="." method="_on_goal_body_exit"]

[connection signal="finished" from="solutio_n_anim" to="." method="_on_solutio_n_anim_finished"]


[editable path="doors/door"]
[editable path="doors/door1"]
